light-themes (0.1.6.0~ppa1) lucid; urgency=low

  * Adding code to make the terminal theme without a profile
  * Ambiance/Radiance: Fix windows control's right alignment (LP: #548532).
   - Fix trough transparency (LP: #548468). 
   - Adjust scrollbar contrast with more distinct borders/add active slider (LP: #537375).
   - Fix menubaritemstyle = 0 (LP: #548735).
  * Ambiance: Fix dropdown list firefox (LP: #532259).
  * Radiance: Fix panel bg[ACTIVE] (LP: #536844).   

 -- Kenneth Wimer <kwwii@ubuntu.com>  Fri, 26 Mar 2010 15:13:30 +0000

light-themes (0.1.5.9) lucid; urgency=low

  * Adding new listviewheaderstyle and seperatorstyle
  * Fixing Radiance menu seperator padding
  * Adding buttons and metactiy config for unfocused windows
  * Rearraning values to best match intended design
  * Ambiance/Radiance: Reduce progressbar appearance (LP: #535175).
   - Minor beautifications / reduced code to buttons, treeview-header, spinbutton, and comboboxentry closer to the original design. Thanks to l3on.
   - Adjustment to scale / scrollbar to utilize bg_color for customization
   - Mixed focus color (LP: #535177).
   - Cleaned up code
   - Fix panel visibility (LP: #536844).
   - Fix inactive entry text and focus
   - Restore missing style sections
   - Fix separator-menu-item Mozilla GTK (LP: #538164).
   - Fix metacity border not defined (LP: #537920).
   - Rewritten metacity themes using trough bg's and icons; prelight, presses, etc. were added (LP: #538721).
   - Fix GtkTreeView::indent-expanders (LP: #540973).
   - Fix round maximized metacity bottom corners (LP: #541542). 
  * Ambiance: Fix brown scale in Banshee (LP: #538500).
   - Fix comboboxentry (LP: #540511).
   - Fix Evolution button/text (LP: #539188).
   - Fix white border on show desktop icon (LP: #544962).
  * Ambiance/Radiance: Global button settings
   - Fix scale borders (LP: #545024). 


 -- Kenneth Wimer <kwwii@ubuntu.com>  Wed, 24 Mar 2010 14:17:17 +0100

light-themes (0.1.5.8) lucid; urgency=low