@@ -9,3 +9,4 @@ GtkTheme=Radiance
 MetacityTheme=Radiance
 IconTheme=ubuntu-mono-light
 CursorTheme=DMZ-White
+ButtonLayout=maximize,minimize,close:
